Optical/OpticalStyle.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
body {
    font-family: 'Roboto', sans-serif;
    display: flex;
    justify-content: center; /* Центрирование контейнера по горизонтали */
    align-items: center; /* Центрирование контейнера по вертикали */
    height: 100vh;
    background-color: #FFFFFF; /* Фон страницы */
    margin: 0 auto;
    cursor: default;
}
html {
    scroll-behavior: smooth;
}

.mobile-only-content {
    display: none; /* По умолчанию скрыт для больших экранов */
}
a {
    text-decoration: none;
}
.BG{
  
/* Auto layout */
display: flex;
flex-direction: column;
align-items: flex-start;
padding: 4px 16px;
gap: 10px;

position: absolute;
width: 120px;
height: 240px;
left: 0px;
top: 0px;

background: #bab2b2;

}
.TABmenu {
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    height: 24px;
    width: 30px;
    margin: 0 auto;
}
.TABmenu div {
    
    width: 100%;
    height: 4px;
    background-color: black;
}

.mobile-only-content {
    position: relative;
}

.burger-menu-content {
    display: none;
    position: absolute;
    top: 60px;
    left: -110px;
    width: 300px;
    height: 440px;
    background-color: gray;
    border: 1px solid #ccc;
    z-index: 1000;
}

.burger-menu-links {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    height: 1000%;
    justify-content: space-around;
    align-items: center;
}

.burger-menu-links li {
    width: 100%;
    text-align: center;
    
}

.burger-menu-links a {
    text-decoration: none;
    color: white;
    font-size: 14px;
    display: block;
    width: 100%;
    padding: 5px 0;
}

.burger-menu-links a:hover {
    background-color: #555;
}

.burger-menu-content.active {
    display: flex;
}



.MenuHigh{
    position: absolute;
    width: 1440;
height: 82px;
left: 0%;
right: 0%;
top: 0px;
max-width: 1440px;
width: 100%;
display: flex;
justify-content: center;
margin: 0 auto;
}
.rectangle-1{
 
position: absolute;
height: 2px;
left: -100%;
right: -100%;
top: 80px;

background: #000000;
border-radius: 0px;

}
.rectangle-2{

position: absolute;
height: 2px;
left: -100%;
right: -100%;
top: 1px;

background: #000000;
border-radius: 0px;

}
.rectangle-3{
   
position: absolute;
height: 82px;
left: 0%;
right: 0%;
top: 0px;

background: #FFFFFF;
border-radius: 0px;

}
.rectangle-4{
       
box-sizing: border-box;

position: absolute;
height: 81px;
left: 0%;
right: 0%;
top: 0px;

border: 2px solid #1A1A1A;
border-radius: 0px;

    }
    .rectangle-5{
      
box-sizing: border-box;

position: absolute;
height: 81px;
left: 0%;
right: 0%;
top: 0px;

border: 2px solid #000000;
border-radius: 0px;

 }
 .rectangle-6{
      
position: absolute;
height: 108px;
left: 0%;
right: 0%;
top: 0px;

border-radius: 0px;

 }
 .rectangleM4{
    width: 320;
  }
.Menu1{

position: absolute;
height: 55px;
left: 83.75%;
right: 3.75%;
top: 15px;

}
.Menu1text{
   
position: absolute;
width: 145px;
height: 35px;
left: calc(50% - 145px/2 - 2.5px);
top: 9px;

font-family: 'Roboto';
font-style: normal;
font-weight: 400;
font-size: 22px;
line-height: 34px;
/* or 155% */
text-align: center;

color: #000000;

}
.Menu2{
    
position: absolute;
height: 81px;
left: 68.75%;
right: 18.54%;
top: 1px;

}
.Menu2text{
  
position: absolute;
width: 96px;
height: 35px;
left: calc(50% - 96px/2 + 0.5px);
top: 23px;

font-family: 'Roboto';
font-style: normal;
font-weight: 400;
font-size: 22px;
line-height: 34px;
/* or 155% */
text-align: center;

color: #000000;

}
.Menu3{
    
position: absolute;
height: 81px;
left: 43.54%;
right: 43.75%;
top: 1px;


    }
    .Menu3text{
    
position: absolute;
width: 70px;
height: 35px;
left: calc(50% - 70px/2 + 0.5px);
top: 23px;

font-family: 'Roboto';
font-style: normal;
font-weight: 400;
font-size: 22px;
line-height: 34px;
/* or 155% */
text-align: center;

color: #000000;
    
    }

    .Menu4{
    
position: absolute;
height: 108px;
left: 4.72%;
right: 86.25%;
top: -19px;
        
            }
            .Menu4text{
           
position: absolute;
height: 109px;
left: 0%;
right: 4.62%;
top: 0px;

font-family: 'Roboto';
font-style: normal;
font-weight: 400;
font-size: 69px;
line-height: 108px;
/* identical to box height, or 157% */

color: #000000;
            
            }
.rectangle-7{

box-sizing: border-box;

position: absolute;
height: 81px;
left: 0%;
right: 0%;
top: 0px;

border: 2px solid #1A1A1A;
border-radius: 0px;

 }
.Menu5{
   
position: absolute;
height: 81px;
left: 30.97%;
right: 56.32%;
top: 1px;

}
.Menu5text{

position: absolute;
width: 38px;
height: 35px;
left: calc(50% - 38px/2 + 0.5px);
top: 23px;

font-family: 'Roboto';
font-style: normal;
font-weight: 400;
font-size: 22px;
line-height: 34px;
/* or 155% */
text-align: center;

color: #000000;

}

.rectangle-8{

box-sizing: border-box;

position: absolute;
height: 81px;
left: 0%;
right: 0%;
top: 0px;

border: 2px solid #000000;
border-radius: 0px;
    
     }
    .Menu6{
    
position: absolute;
height: 81px;
left: 56.11%;
right: 31.11%;
top: 1px;

    }
    .Menu6text{

position: absolute;
width: 86px;
height: 35px;
left: calc(50% - 86px/2);
top: 23px;

font-family: 'Roboto';
font-style: normal;
font-weight: 400;
font-size: 22px;
line-height: 34px;
/* or 155% */
text-align: center;

color: #000000;

    }
    .rectangle-9{

position: absolute;
height: 55px;
left: 0%;
right: 0%;
top: 0px;

border-radius: 30px;

             }

.Frame1{
    max-width: 1440px;
    width: 100%;
    display: flex;
    justify-content: center;
    margin: 0 auto;   
position: absolute;
height: 720px;
left: 0%;
right: 0%;
top: 97px;

}
.Frame1rec{
 
position: absolute;
height: 670px;
left: 0%;
right: 0%;
top: 50px;

background: #AABAD0;
border-radius: 0px;

}
.Frame1PIC{

position: absolute;
width: 636px;
height: 591px;
left: 20px;
top: 79px;

background: url(Images/image1.jpg);

}
/* ... */

